<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerviewmodel"
            type="com.example.politicalpreparedness.viewmodels.findrepresentative.FindRepresentativeViewModel" />
    </data>
<androidx.constraintlayout.motion.widget.MotionLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_find_my_representative_motion_layout_scene2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rep_search_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/offWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/et_address_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:saveEnabled="false"
            android:hint="@string/address1"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_address_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top_search_rep"
            android:saveEnabled="false"
            android:ems="10"
            android:hint="@string/address2"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/et_address_line1"
            app:layout_constraintTop_toBottomOf="@+id/et_address_line1" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top_search_rep"
            android:saveEnabled="false"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/et_address_line2"
            app:layout_constraintTop_toBottomOf="@+id/et_address_line2" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/et_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_city"
            app:layout_constraintTop_toBottomOf="@+id/et_address_line2" />

        <EditText
            android:id="@+id/et_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top_search_rep"
            android:ems="10"
            android:saveEnabled="false"
            android:hint="@string/zip_code"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/et_city"
            app:layout_constraintTop_toBottomOf="@+id/et_city" />

        <Button
            android:id="@+id/button_find_my_representative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top_search_rep"
            android:text="@string/find_my_representative"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_zipcode" />

        <Button
            android:id="@+id/button_use_my_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin_top_search_rep"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_find_my_representative" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/my_represenatives"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/rep_search_data" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_representatives_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>
</layout>