<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:id="@+id/coordinator_layout"
        android:layout_height="match_parent"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="350dp">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_tool_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:expandedTitleTextAppearance="@android:color/transparent"
                android:paddingBottom="2dp"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">


                    <EditText
                        android:id="@+id/et_address_line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/address1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_address_line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/address2"
                        app:layout_constraintStart_toStartOf="@+id/et_address_line1"
                        app:layout_constraintTop_toBottomOf="@+id/et_address_line1" />

                    <EditText
                        android:id="@+id/et_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/city"
                        app:layout_constraintStart_toStartOf="@+id/et_address_line2"
                        app:layout_constraintTop_toBottomOf="@+id/et_address_line2" />

                    <Spinner
                        android:id="@+id/spinner_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        app:layout_constraintBottom_toBottomOf="@+id/et_city"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_address_line2" />

                    <EditText
                        android:id="@+id/et_zipcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/zip_code"
                        app:layout_constraintStart_toStartOf="@+id/et_city"
                        app:layout_constraintTop_toBottomOf="@+id/et_city" />

                    <Button
                        android:id="@+id/button_find_my_representative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_my_representative"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_zipcode" />

                    <Button
                        android:id="@+id/button_use_my_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_my_location"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_find_my_representative" />

                </androidx.constraintlayout.widget.ConstraintLayout>





            </com.google.android.material.appbar.CollapsingToolbarLayout>





        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/address2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/address2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/address2" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>