<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/offWhite"
        tools:context=".fragments.electiondatadetails.ElectionDataDetail">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_election_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/election_title_text_size"
                android:textColor="@color/white"
                tools:text="Hello"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_date_of_election"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/date_of_election_title_margin_left_and_right"
            android:layout_marginTop="@dimen/margin_top_election_date"
            android:layout_marginEnd="@dimen/date_of_election_title_margin_left_and_right"
            android:textStyle="bold"
            tools:text="TextView"
            android:textSize="@dimen/text_size_election_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/election_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top_election_data"
            android:layout_marginTop="@dimen/election_top_from_title_election_data"
            android:layout_marginEnd="@dimen/margin_end_election_data"
            android:text="@string/election_information"
            android:textSize="@dimen/text_size_title_election_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_of_election" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top_election_data"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_end_election_data"
            android:text="@string/voting_location"
            android:textSize="@dimen/text_size_election_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/election_information" />

        <TextView
            android:id="@+id/link2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_top_election_data"
            android:layout_marginEnd="@dimen/margin_end_election_data"
            android:text="@string/ballot_information"
            android:textSize="@dimen/text_size_election_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link" />


        <Button
            android:id="@+id/button_follow_election"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_election_data"
            android:textSize="@dimen/text_size_election_data"
            android:layout_marginEnd="@dimen/margin_end_election_data"
            android:layout_marginBottom="@dimen/margin_bottom_election_data_button"
            android:text="@string/follow_election"
            android:theme="@style/Button.Grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>